testdata/parser/negative/3.pdl
#version 100

// sync block nested deeply in composite
composite main(in a, out b) {
	channel x -> y;
	while (true) {
		synchronous {
			skip;
		}
	}
}
